# cbr_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build_and_test.yml  codecov.yml  deps.repos  foxy.yml  galactic.yml
cmake/: ConfigTemplate.cmake.in
include/cbr_ros/: clock_traits_ros.hpp  msg_utils.hpp  parameters.hpp  timeout_msg.hpp
test/: test_msg_utils.cpp  test_parameters.cpp  test_parameters_common.hpp
